[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/stickman/NinjaExtra.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/XYPlot/XYPlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/stickman/sprites/actionicons/store_momentum.png" type="Texture" id=5]
[ext_resource path="res://characters/stickman/sprites/actionicons/release_momentum.png" type="Texture" id=6]

[node name="NinjaExtra" instance=ExtResource( 1 )]
theme = ExtResource( 3 )
alignment = 1
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="." index="0"]
margin_left = 251.0
margin_right = 317.0
margin_bottom = 360.0
alignment = 2

[node name="PullButton" type="CheckButton" parent="VBoxContainer2" index="0"]
unique_name_in_owner = true
margin_top = 322.0
margin_right = 66.0
margin_bottom = 334.0
rect_min_size = Vector2( 34, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Pull"

[node name="DetachButton" type="CheckButton" parent="VBoxContainer2" index="1"]
unique_name_in_owner = true
margin_top = 335.0
margin_right = 66.0
margin_bottom = 347.0
rect_min_size = Vector2( 34, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Detach"

[node name="BombButton" type="CheckButton" parent="VBoxContainer2" index="2"]
unique_name_in_owner = true
margin_top = 348.0
margin_right = 66.0
margin_bottom = 360.0
rect_min_size = Vector2( 34, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Detonate"

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
margin_left = 318.0
margin_right = 388.0
margin_bottom = 360.0
alignment = 2

[node name="BoostDir" parent="VBoxContainer" index="0" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 273.0
margin_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
limit_angle = true
limit_range_degrees = 110.0
limit_center_degrees = 10.0
limit_symmetrical = false
default_value = Vector2( 1, 0 )
snap_angles = 4
snap_align_to_limit_center = false

[node name="ReleaseButton" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 340.0
margin_right = 70.0
margin_bottom = 360.0
rect_min_size = Vector2( 34, 20 )
hint_tooltip = "Unleash your stored momentum."
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.498039, 0.270588, 0.45098, 1 )
custom_colors/font_color_focus = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.25098, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.25098, 0.713726, 1 )
text = "Boost"
icon = ExtResource( 6 )

[node name="StoreButton" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
visible = false
margin_top = 340.0
margin_right = 69.0
margin_bottom = 360.0
rect_min_size = Vector2( 34, 20 )
hint_tooltip = "Save your momentum and use it later."
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Store"
icon = ExtResource( 5 )
